--- a/typeface/style.css
+++ b/typeface/style.css
@@ -22,7 +22,10 @@
 	padding-bottom: 10px;
 	position: fixed;
 	background:transparent;
+}
 
+.homepage {
+	background:transparent;
 }
 
 p {
@@ -66,7 +69,6 @@ p {
 }
 .container:active .red{
 		opacity: 1;
-		top:15px;
 
 	}
 
