--- a/community-resource/css/style.css
+++ b/community-resource/css/style.css
@@ -1,7 +1,18 @@
+#icons{
+	width: 97vw;
+	height: 100px;
+	margin: 10px;
+	/*border: 1px solid yellow;*/
+	display: flex;
+	justify-content: space-between;
+	padding-right: 500px;
+	/*padding-left: 15px*/
+}
+
 #grid {
 	width: 1400px;
 	height: 600px;
-	margin: 200px auto;
+	margin: 100px auto;
 	/*border: 1px solid yellow;*/
 	display: flex;
 	justify-content: center;
@@ -11,6 +22,13 @@
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	grid-template-rows: 1fr 1fr 1fr;*/
 }
+
+#grid:nth-child(1) { order: 2; }
+        #grid :nth-child(2) { order: 3; }
+        #grid :nth-child(3) { order: 1; }
+        #grid :nth-child(4) { order: 3; }
+        #grid :nth-child(5) { order: 1; }
+
 
 .button {
 	border:2px solid yellow;
@@ -41,6 +59,7 @@ a {
 	font-size: 140px;
 	font-style: italic;
 	color: yellow;
+	margin-left: 15px
 
 }
 
@@ -58,23 +77,26 @@ a {
 	width: 150px;
 	height: 35px;
 	border-radius: 50%;
-	border: 2px solid black;
+	border: 2px solid yellow;
 	justify-content: center;
 	text-align: center;
 	font-size: large;
-	font-family: arial;
+	/*font-family: arial;*/
 	padding-top: 1%;
+
+
 }
 
- .right {
- 	float: right;
+/* .right {
+ 	/*float: right;*/
   	right: 500px;
   	width: 300px;
   	border: 3px solid #73AD21;
   	padding: 10px;
   	justify-content: right;
+  	display: absolute;
 
-}
+}*/
 
 #email{
 	color: black;
