--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 
 *{
-	background: floralwhite;
+	background: honeydew;
 	font-family: 'JetBrains Mono', monospace;
 	color: black;
 	padding-left: 10px;
